2012-10-10  Ross Johnson <ross dot johnson at homemail dot com dot au>

	* cancel1.c: Fix comment typo.
	* Makefile: Adding functionality to support rapid turnaround of
	individual or small sets of tests.
	* GNUmakefile: Likewise.
	* common.mk: New makefile include file; split out common macros.
	* runorder.mk: New makefile include file; split out run order rules
	to allow selective inclusion.

2012-10-04  Ross Johnson <ross dot johnson at homemail dot com dot au>

	* join4.c: Modified for pthread_tryjoin_np tests.

2012-09-29  Ross Johnson <ross dot johnson at homemail dot com dot au>

	* Makefile: Align target names with build makefile target names
	following changes there; remove the separate static tests list.
	* GNUmakefile: Likewise; consolidate rules.

2012-09-25  Ross Johnson <ross dot johnson at homemail dot com dot au>

	* context1.c (anotherEnding): Should exit the thread, not return.

2012-09-23  Ross Johnson <ross dot johnson at homemail dot com dot au>

	* Makefile: Add secondary target names to existing test targets so
	we can output how the library was built, e.g. "Running VC-inlined test".
	This is useful when making "all-tests" from the library build Makefile.
	* GNUmakefile: Similarly.

2012-09-22  Ross Johnson <ross dot johnson at homemail dot com dot au>

	* GNUmakefile: Do what Makefile does and print the make target
	when running each test.

2012-09-22  Daniel Richard. G <danielg at teragram dot com>

	* Makefile: This reverts an earlier change of mine. In some
	versions of nmake, $(MAKE) is a full path, which utterly futzes
	up the "make help" output; regularized the test targets, so we
	have e.g. VSE-static now; regularized the parentheticals;
	removed a spurious use of $(DLL_VER); new test targets: VCX-debug
	{VSE,VCX}-static{,-debug}; fixed the {VC,VCE}-static-debug targets.
	* exception3.c: Narrowly exclude this test from the known-bad VS2005
	configuration (By the way: I downloaded and tested with what is