@@ -79,7 +79,7 @@ EHFLAGS	=
 # If a test case returns a non-zero exit code to the shell, make will
 # stop.
 
-PASSES	= sizes.pass  loadfree.pass &
+PASSES	= sizes.pass  &
 	  self1.pass  mutex5.pass  &
 	  mutex1.pass  mutex1n.pass  mutex1e.pass  mutex1r.pass &
 	  semaphore1.pass  semaphore2.pass semaphore3.pass &
@@ -291,7 +291,6 @@ join2.pass: create1.pass
 join3.pass: join2.pass
 join4.pass: join3.pass
 kill1.pass: 
-loadfree.pass: pthread.dll
 mutex1.pass: self1.pass
 mutex1n.pass: mutex1.pass
 mutex1e.pass: mutex1.pass
